<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.menu.MenuActivity">

    <ImageView
        android:id="@+id/profile_info_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_image_size"
        android:background="@drawable/profile_info_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/menu_profile_image"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menu_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_small_margin"
        android:layout_marginTop="@dimen/default_small_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/profile_username_font_size"
        android:typeface="serif"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/menu_profile_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:src="@android:drawable/ic_dialog_dialer"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/menuTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginTop="@dimen/title_margin_top"
        android:src="@drawable/title"
        android:contentDescription="@string/title_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/createGameButton"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:text="@string/create_game_button_name"
        android:gravity="center"
        android:textSize="@dimen/main_button_font_size"
        android:typeface="serif"
        android:background="@drawable/rectangular_button"
        android:onClick="goToCreateGameActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuTitle"/>

    <Button
        android:id="@+id/findGameButton"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/find_game_button_name"
        android:textSize="@dimen/main_button_font_size"
        android:typeface="serif"
        android:background="@drawable/rectangular_button"
        android:onClick="goToFindGameActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createGameButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/settings_button_name"
        android:textSize="@dimen/main_button_font_size"
        android:typeface="serif"
        android:background="@drawable/rectangular_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findGameButton" />

</androidx.constraintlayout.widget.ConstraintLayout>