<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.login.RegistrationActivity">

    <!-- Default profile image -->
    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="@dimen/image_view_avatar_size"
        android:layout_height="@dimen/image_view_avatar_size"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Button to change avatar image -->
    <ImageButton
        android:id="@+id/buttonChangeAvatarImage"
        android:layout_width="@dimen/small_button_size"
        android:layout_height="@dimen/small_button_size"
        android:src="@android:drawable/ic_menu_edit"
        android:background="@drawable/square_button"
        app:layout_constraintStart_toEndOf="@id/imageViewAvatar"
        app:layout_constraintBottom_toBottomOf="@id/imageViewAvatar"
        android:onClick="showOrToggleImageGrid" />

    <!-- Grid of selectable images -->
    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/avatarsGrid"
        android:layout_width="@dimen/grid_of_avatars_size"
        android:layout_height="@dimen/grid_of_avatars_size"
        android:visibility="gone"
        android:elevation="7dp"
        android:background="@drawable/square_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonChangeAvatarImage"
        app:columnCount="4"
        app:rowCount="4">

        <ImageView
            android:id="@+id/SelectableAvatarImage1"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/SelectableAvatarImage2"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar2"
            app:layout_columnWeight="2"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/SelectableAvatarImage3"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar3"
            app:layout_columnWeight="3"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/SelectableAvatarImage4"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar4"
            app:layout_columnWeight="4"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/SelectableAvatarImage5"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar5"
            app:layout_columnWeight="1"
            app:layout_rowWeight="2" />

        <ImageView
            android:id="@+id/SelectableAvatarImage6"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar6"
            app:layout_columnWeight="2"
            app:layout_rowWeight="2" />

        <ImageView
            android:id="@+id/SelectableAvatarImage7"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar7"
            app:layout_columnWeight="3"
            app:layout_rowWeight="2" />

        <ImageView
            android:id="@+id/SelectableAvatarImage8"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar8"
            app:layout_columnWeight="4"
            app:layout_rowWeight="2" />

        <ImageView
            android:id="@+id/SelectableAvatarImage9"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar9"
            app:layout_columnWeight="1"
            app:layout_rowWeight="3" />

        <ImageView
            android:id="@+id/SelectableAvatarImage10"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar10"
            app:layout_columnWeight="2"
            app:layout_rowWeight="3" />

        <ImageView
            android:id="@+id/SelectableAvatarImage11"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar11"
            app:layout_columnWeight="3"
            app:layout_rowWeight="3" />

        <ImageView
            android:id="@+id/SelectableAvatarImage12"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar12"
            app:layout_columnWeight="4"
            app:layout_rowWeight="3" />

        <ImageView
            android:id="@+id/SelectableAvatarImage13"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar13"
            app:layout_columnWeight="1"
            app:layout_rowWeight="4" />

        <ImageView
            android:id="@+id/SelectableAvatarImage14"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar14"
            app:layout_columnWeight="2"
            app:layout_rowWeight="4" />

        <ImageView
            android:id="@+id/SelectableAvatarImage15"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar15"
            app:layout_columnWeight="3"
            app:layout_rowWeight="4" />

        <ImageView
            android:id="@+id/SelectableAvatarImage16"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:onClick="selectAvatarImage"
            android:padding="@dimen/grid_of_avatars_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar16"
            app:layout_columnWeight="4"
            app:layout_rowWeight="4" />

    </androidx.gridlayout.widget.GridLayout>

    <EditText
        android:id="@+id/registration_username"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_object_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/prompt_username"
        android:autofillHints="username"
        android:imeOptions="actionNext"
        android:inputType="textAutoCorrect"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar" />

    <EditText
        android:id="@+id/registration_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_object_height"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_email"
        android:autofillHints="emailAddress"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_username" />

    <EditText
        android:id="@+id/registration_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_object_height"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_password"
        android:autofillHints="password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_email" />

    <EditText
        android:id="@+id/registration_repeat_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/default_object_height"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_repeat_password"
        android:autofillHints="password"
        android:imeActionLabel="@string/sign_up"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_password" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:background="@drawable/rectangular_button"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_repeat_password"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/no_account_text_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/sign_up_button" />

    <TextView
        android:id="@+id/sign_in_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:autoLink="web"
        android:linksClickable="true"
        android:textColor="@color/colorTextLink"
        android:selectAllOnFocus="true"
        android:onClick="goToLoginActivity"
        app:layout_constraintStart_toEndOf="@id/no_account_text_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>